# 1040-es-calculator

./: .gitignore  README.md  db.py  keep_alive.py  main.py  pyproject.toml  taxCalc.py
static/css/: main.css
static/js/: main.js
templates/: board.html  contact.html  index.html  news.html
